# python_mongo_db

python_homework_8/: pyproject.toml
python_homework_8/1/: config.ini  connect.py  main.py  models.py  seed.py
python_homework_8/2/: config.ini  consumer.py  model_contact.py  producer.py
