[tool.poetry]
name = "python-homework-8"
version = "0.1.0"
description = ""
authors = ["Maria-hub746 <113303447+Maria-hub746@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_homework_8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.26.0"
redis = "^4.4.2"
redis-lru = "^0.1.2"
pika = "^1.3.1"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
